# DQCR-Studio

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json  todo_arch_riew.md  todo_shad.md  workflow sample.json
FTRepCBR.Workflow.FW/: .gitignore  AGENTS.md  Admin_guide.md  Viewer_guide.html  pyproject.toml  requirements.txt  setup.py
FTRepCBR.Workflow.FW/docs/: Admin_guide.md  Build_JSON_Structure.md  Framework_Packaging_Changes.md  User_guide.md
FTRepCBR.Workflow.FW/sample/RF110NEW/: project.yml
FTRepCBR.Workflow.FW/src/: __init__.py  cli.py  logging_config.py  pattern_matcher.py
FTRepCBR.Workflow.FW/src/config/: __init__.py  tools.yml  workflow_engines.yml
FTRepCBR.Workflow.FW/src/exceptions/: __init__.py  base.py  config.py  macros.py  model.py  template.py
FTRepCBR.Workflow.FW/src/generation/: DefaultBuilder.py  DefaultBuilderNew.py  __init__.py  base.py  build_folder_config.py  builder_registry.py  cte_materialization.py  dependency_resolver.py  explicit.py  graph_based.py  naming_convention.py  resolver_registry.py  sql_object_config.py
FTRepCBR.Workflow.FW/src/macros/: __init__.py  env.py  exceptions.py
FTRepCBR.Workflow.FW/src/materialization/: __init__.py  renderer.py
FTRepCBR.Workflow.FW/src/models/: __init__.py  attribute.py  step.py  (+14 more)
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/dqcr_studio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_files_api_contracts.py  test_fw_service.py  test_main_api.py  test_projects_api.py
(+484 files in other folders)
